ghc-4335c07/testsuite/tests/rename/should_compile/rn019.hs
module Silly (
        Data.Array.accum
  ) where
import qualified Data.Array
