ghc-4335c07/testsuite/tests/rename/should_fail/T9006.hs
module T9006 where

import T9006a (T(T))
